--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@angular/common": "~9.0.0",
     "@angular/compiler": "~9.0.0",
     "@angular/core": "~9.0.0",
+    "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "~9.0.0",
     "@angular/localize": "^9.0.0",
     "@angular/material": "^9.0.0",
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^5.2.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
